--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,6 @@ name: Build and push Docker image
 
 on:
   push:
-    branches:
-      - "**"
     tags:
       - "v*.*.*"
 
@@ -35,8 +33,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: ghcr.io/kurrawong/spatial-indexer:${{ github.ref_name }}
           platforms: |
             linux/amd64
             linux/arm64/v8
